--- a/LwP.ipynb
+++ b/LwP.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
     "        covariance_matrix = np.cov(X, rowvar=False)\n",
     "        self.inv_cov_matrix = np.linalg.inv(covariance_matrix)\n",
     "\n",
-    "    def mahalanobis_distance(self, a, b):\n",
+    "    def mahalanobis_distance(self, a, b, name='maha'):\n",
     "        \"\"\"\n",
     "        Parameters:\n",
     "            a (ndarray): First vector.\n",
@@ -436,9 +436,10 @@
     "            float: Mahalanobis distance between a and b.\n",
     "        \"\"\"\n",
     "        diff = a - b\n",
-    "        return np.sqrt(np.dot(np.dot(diff, self.inv_cov_matrix), diff.T))\n",
+    "        mat = self.inv_cov_matrix if name == 'maha' else np.eye(a.shape[0])\n",
+    "        return np.sqrt(np.dot(np.dot(diff, mat), diff.T))\n",
     "\n",
-    "    def update(self, X_new, y_new):\n",
+    "    def update(self, X_new, y_new, update_inv_cov=True):\n",
     "        \"\"\"\n",
     "        Updates the model with new training examples.\n",
     "        Parameters:\n",
@@ -462,9 +463,10 @@
     "                self.class_counts[idx] = total_count\n",
     "\n",
     "        # Update covariance matrix based on the combined data\n",
-    "        combined_X = np.vstack([self.prototypes, X_new])\n",
-    "        covariance_matrix = np.cov(combined_X, rowvar=False)\n",
-    "        self.inv_cov_matrix = np.linalg.inv(covariance_matrix)\n",
+    "        if update_inv_cov:\n",
+    "            combined_X = np.vstack([self.prototypes, X_new])\n",
+    "            covariance_matrix = np.cov(combined_X, rowvar=False)\n",
+    "            self.inv_cov_matrix = np.linalg.inv(covariance_matrix)\n",
     "\n",
     "    def dist_mat(self, X):\n",
     "        n_samples = X.shape[0]\n",
@@ -514,7 +516,7 @@
     "            X2.append([np.max(Xi), i])\n",
     "        \n",
     "        X2 = sorted(X2)\n",
-    "        X2 = X2[-k : ]\n",
+    "        X2 = X2[-1 * k : ]\n",
     "\n",
     "        X_res = []\n",
     "        y_res = []\n",
@@ -525,14 +527,14 @@
     "        \n",
     "        return np.asanyarray(X_res), np.asanyarray(y_res)\n",
     "\n",
-    "    def predict(self, X):\n",
+    "    def predict(self, X, name='maha'):\n",
     "        n_samples = X.shape[0]\n",
     "        predictions = np.zeros(n_samples)\n",
     "\n",
     "        for i in range(n_samples):\n",
     "            distances = np.zeros(len(self.labels))\n",
     "            for j, prototype in enumerate(self.prototypes):\n",
-    "                distances[j] = self.mahalanobis_distance(X[i], prototype)\n",
+    "                distances[j] = self.mahalanobis_distance(X[i], prototype, name)\n",
     "            predictions[i] = self.labels[np.argmin(distances)]\n",
     "\n",
     "        return predictions\n"
@@ -867,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +878,7 @@
        "'85.36'"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,10 +1008,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running 1\n",
+      "66.24 \n",
+      "Running 2\n",
+      "65.72 46.44 \n",
+      "Running 3\n",
+      "65.84 46.40 69.88 \n",
+      "Running 4\n",
+      "65.80 46.20 69.96 74.08 \n",
+      "Running 5\n",
+      "65.96 46.08 69.68 73.72 79.76 \n",
+      "Running 6\n",
+      "65.84 46.20 69.88 73.96 79.68 65.84 \n",
+      "Running 7\n",
+      "66.28 46.84 69.96 74.08 79.68 66.12 72.56 \n",
+      "Running 8\n",
+      "66.64 47.68 70.00 74.16 79.60 66.28 72.80 67.44 \n",
+      "Running 9\n",
+      "66.48 47.56 70.12 74.16 79.68 66.32 72.52 67.64 58.16 \n",
+      "Running 10\n",
+      "66.28 47.48 69.84 73.72 79.60 66.12 72.56 67.28 58.00 75.60 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 11): # for part two\n",
+    "    print(f'Running {i}')\n",
+    "    # print(res[i - 2])\n",
+    "    X = l_features(i, 'train', 'two')\n",
+    "    # y = model.predict(X)\n",
+    "    X_opt, y_opt = model2.top_k(X, 1000)\n",
+    "    model2.update(X_opt, y_opt, False)\n",
+    "\n",
+    "    for j in range(1, i + 1):\n",
+    "        y = load_data(j, 'eval', 'two', y_only=True)\n",
+    "        X = l_features(j, 'eval', 'two')\n",
+    "        y_pred = model2.predict(X, 'euc')\n",
+    "\n",
+    "        acc = np.mean(y_pred == y)\n",
+    "        # res[i - 1][j - 1] = f'{acc * 100:.2f}'\n",
+    "        print(f'{acc * 100:.2f}', end=' ')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
