--- a/LwP.ipynb
+++ b/LwP.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1016,25 +1016,25 @@
      "output_type": "stream",
      "text": [
       "Running 1\n",
-      "66.24 \n",
+      "80.24 80.96 80.96 81.60 81.84 81.64 81.00 81.64 80.64 81.68 66.24 \n",
       "Running 2\n",
-      "65.84 47.76 \n",
+      "80.40 80.96 81.24 81.40 81.84 81.92 81.00 81.20 80.72 81.88 65.84 47.76 \n",
       "Running 3\n",
-      "65.72 47.48 70.40 \n",
+      "80.48 80.72 81.00 81.48 81.76 82.04 81.00 81.16 80.64 81.76 65.72 47.48 70.40 \n",
       "Running 4\n",
-      "66.04 47.48 70.20 74.44 \n",
+      "80.44 80.80 81.12 81.56 81.60 82.12 81.00 81.00 80.56 82.00 66.04 47.48 70.20 74.44 \n",
       "Running 5\n",
-      "66.00 47.64 70.24 74.32 80.32 \n",
+      "80.52 80.64 81.08 81.48 81.36 82.08 80.64 80.92 80.48 81.96 66.00 47.64 70.24 74.32 80.32 \n",
       "Running 6\n",
-      "65.96 47.52 70.36 74.16 80.04 66.88 \n",
+      "80.36 80.64 81.04 81.52 81.52 81.96 80.84 80.96 80.28 82.00 65.96 47.52 70.36 74.16 80.04 66.88 \n",
       "Running 7\n",
-      "65.92 47.40 70.16 74.12 80.04 67.08 72.56 \n",
+      "80.24 80.64 81.20 81.48 81.40 81.88 80.88 80.88 80.40 82.00 65.92 47.40 70.16 74.12 80.04 67.08 72.56 \n",
       "Running 8\n",
-      "66.32 47.76 70.60 74.48 80.12 67.20 72.88 67.32 \n",
+      "80.32 80.72 81.40 81.24 81.40 81.92 80.80 80.68 80.60 82.00 66.32 47.76 70.60 74.48 80.12 67.20 72.88 67.32 \n",
       "Running 9\n",
-      "66.04 47.56 70.28 74.20 80.24 66.84 72.72 67.32 58.20 \n",
+      "80.40 80.88 81.20 81.20 81.20 81.68 80.88 80.76 80.52 82.08 66.04 47.56 70.28 74.20 80.24 66.84 72.72 67.32 58.20 \n",
       "Running 10\n",
-      "66.08 47.68 70.48 73.96 80.32 67.04 72.48 67.12 58.04 76.24 \n"
+      "80.44 80.80 81.08 81.20 81.20 81.84 80.76 80.76 80.40 82.04 66.08 47.68 70.48 73.96 80.32 67.04 72.48 67.12 58.04 76.24 \n"
      ]
     }
    ],
@@ -1047,6 +1047,15 @@
     "    X_opt, y_opt = model2.top_k(X, 500)\n",
     "    model2.update(X_opt, y_opt, False)\n",
     "\n",
+    "    for j in range(1, 11):\n",
+    "        y = load_data(j, 'eval', 'one', y_only=True)\n",
+    "        X = l_features(j, 'eval', 'one')\n",
+    "        y_pred = model2.predict(X, 'euc')\n",
+    "\n",
+    "        acc = np.mean(y_pred == y)\n",
+    "        # res[i - 1][j - 1] = f'{acc * 100:.2f}'\n",
+    "        print(f'{acc * 100:.2f}', end=' ')\n",
+    "\n",
     "    for j in range(1, i + 1):\n",
     "        y = load_data(j, 'eval', 'two', y_only=True)\n",
     "        X = l_features(j, 'eval', 'two')\n",
@@ -1055,6 +1064,7 @@
     "        acc = np.mean(y_pred == y)\n",
     "        # res[i - 1][j - 1] = f'{acc * 100:.2f}'\n",
     "        print(f'{acc * 100:.2f}', end=' ')\n",
+    "\n",
     "    print()"
    ]
   }
