--- a/report/report.tex
+++ b/report/report.tex
@@ -16,7 +16,7 @@
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
 \usepackage{float}
 % \vspace{-20pt}
-\title{CS771 Mini Project\\Doctrina Aeterna}
+\title{CS771 Mini Project II\\DReaMeR - Dynamic Readaptation and Memory Retention}
 
 
 \author{
